dartagnan/src/test/resources/spirv-clang/benign_race_tests/fail/writereadarray_equality.spv.dis
; @Config: 3, 1, 1
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 24
; Schema: 0
               OpCapability Addresses
               OpCapability Linkage
               OpCapability Kernel
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %12 "example" %__spirv_BuiltInLocalInvocationId
               OpExecutionMode %12 ContractionOff
               OpSource OpenCL_C 200000
               OpName %__spirv_BuiltInLocalInvocationId "__spirv_BuiltInLocalInvocationId"
               OpName %foo "foo"
               OpDecorate %__spirv_BuiltInLocalInvocationId BuiltIn LocalInvocationId
               OpDecorate %__spirv_BuiltInLocalInvocationId Constant
               OpDecorate %13 FuncParamAttr NoCapture
               OpDecorate %foo LinkageAttributes "foo" Import
               OpDecorate %__spirv_BuiltInLocalInvocationId LinkageAttributes "__spirv_BuiltInLocalInvocationId" Import
       %uint = OpTypeInt 32 0
     %uint_0 = OpConstant %uint 0
     %uint_1 = OpConstant %uint 1
     %v3uint = OpTypeVector %uint 3
%_ptr_Input_v3uint = OpTypePointer Input %v3uint
       %void = OpTypeVoid
          %7 = OpTypeFunction %void %uint
%_ptr_Workgroup_uint = OpTypePointer Workgroup %uint
         %11 = OpTypeFunction %void %_ptr_Workgroup_uint
%__spirv_BuiltInLocalInvocationId = OpVariable %_ptr_Input_v3uint Input
        %foo = OpFunction %void None %7
          %9 = OpFunctionParameter %uint
               OpFunctionEnd
         %12 = OpFunction %void None %11
         %13 = OpFunctionParameter %_ptr_Workgroup_uint
         %14 = OpLabel
         %15 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
         %16 = OpCompositeExtract %uint %15 0
         %17 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %13 %16
               OpStore %17 %uint_0 Aligned 4
         %20 = OpIAdd %uint %16 %uint_1
         %21 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %13 %20
         %22 = OpLoad %uint %21 Aligned 4
         %23 = OpFunctionCall %void %foo %22
               OpReturn
               OpFunctionEnd
